tests/test_struct/bad/nonexisting_struct.catala
## [Article]

```catala
new struct Foo:
  data f content int

new scope A:
  param x content Foo
  param y content int

scope A:
  def x := Foo { -- f: 1 }
  def y := x.Fo.f

```
